Fixed IE6 bug when toggling through login tabs on the homepage caused overlap

--- a/zoo/static/css/ie.css
+++ b/zoo/static/css/ie.css
@@ -7,6 +7,7 @@ By Richard Rutter, clearleft.com
 body {
 	font-size: 100%;
 }
-.contents {
+.contents,
+.receptacle {
 	zoom: 1;
 }
